Resize 3 pictures into user manual
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@614 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/doc/user_manual.tex
+++ b/doc/user_manual.tex
@@ -315,7 +315,7 @@ Simply select one or more files on your computer and use drag and drop to
 
 \begin{figure}[H]
 \centering
-\scalebox{0.5}{\includegraphics{pixs/send_file_drag_and_drop.png}}
+\scalebox{0.3}{\includegraphics{pixs/send_file_drag_and_drop.png}}
 \caption{Drag and Drop}
 \end{figure}
 
@@ -323,7 +323,7 @@ You will not see any visual feedback (no progress bar) but you can see in your t
 
 \begin{figure}[H]
 \centering
-\scalebox{0.5}{\includegraphics{pixs/send_file_drag_and_drop_libticalcs.png}}
+\scalebox{0.3}{\includegraphics{pixs/send_file_drag_and_drop_libticalcs.png}}
 \caption{Drag and Drop}
 \end{figure}
 
@@ -332,7 +332,7 @@ You can check if your program is correctly uploaded to calc by listing them insi
 \begin{figure}[H]
 \centering
 \scalebox{0.5}{\includegraphics{pixs/send_file_list.png}}
-\caption{Check if a programs is uploaded correctly (ti83)}
+\caption{Check if a programs is uploaded correctly (here on a ti83)}
 \end{figure}
 
 \subsection{Using the command line}
