--- a/doc/user_manual.tex
+++ b/doc/user_manual.tex
@@ -41,9 +41,15 @@
 \author {DUPONCHELLE Thibault - MOODY Benjamin}
 
 
-
 \begin{document}
 \maketitle
+
+\begin{figure}[H]
+\centering
+\scalebox{1}{\includegraphics{pixs/tilem2.png}}
+\caption{TilEm2}
+\end{figure}
+
 
 \tableofcontents
 
